# dslToPngMCP

./: .env.example  .gitignore  .roomodes  .roorules  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  TESTING_FRAMEWORK_SUMMARY.md  docker-compose.prod.yaml  docker-compose.yaml  mypy.ini  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  pyvenv.cfg  renderHtml.js  server.js  setup.cfg  test_e2e_runner.py  test_e2e_sse.py  test_e2e_sse.sh  test_pipeline.py
.github/workflows/: test-suite.yml
debug_scripts/: README.md  run_host_isolation_tests.sh  run_isolation_tests_with_dev_browsers.py  test_component_isolation.py  test_mcp_tool_direct.py  test_sse_mock_infrastructure.py  test_sse_server_direct.py
docker/: Dockerfile.test  __init__.py  docker-compose.test.yml
docker/config/: celery-dev.env  fastapi-dev.env  mcp-dev.env  playwright-dev.env
docker/nginx/: Dockerfile  logrotate.conf  nginx.conf
docker/nginx/conf.d/: dev.conf  locations.conf  prod.conf
docker/nginx/html/: 404.html  50x.html  index.html
docker/nginx/scripts/: docker-entrypoint.sh
docker/redis/: Dockerfile  redis-dev.conf  redis-prod.conf  redis.conf
docker/redis/scripts/: health-check.sh
docs/: API.md  ARCHITECTURE.md  DSL_REFERENCE.md  INSTALLATION.md  OPERATIONS.md  TESTING_FRAMEWORK_SUMMARY.md  TEST_FRAMEWORK_OVERVIEW.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/examples/: README.md
docs/examples/tutorials/: button-tutorial.json  dashboard-tutorial.json  login-form-tutorial.json
docs/testing/: README.md  test-framework-overview.md  validation-guide.md
examples/: README.md  dashboard.json  empty.json  error_example.json  login_form.json  minimal.json  mobile_app.yaml  simple_button.json
examples/client/: API.md  README.md  demo-basic.html  package.json
examples/client/css/: demo.css
examples/client/js/: demo-utils.js
requirements/: __init__.py  base.txt  dev.txt  prod.txt
scripts/: check_performance_regression.py  deploy-prod.sh  generate_test_report.py  health-check.sh  merge_coverage_reports.py  pytest_wrapper.py  setup-dev.sh  test-setup.sh  validate_test_framework.py  vscode_test_runner.py
secrets/: app_secret_key.txt
src/: __init__.py
src/api/: __init__.py  auth.py  main.py
src/api/routes/: __init__.py  health.py  render.py  sse.py  status.py
src/api/sse/: __init__.py  connection_manager.py  events.py  mcp_bridge.py  models.py
src/config/: __init__.py  database.py  logging.py  settings.py
src/core/: __init__.py
src/core/dsl/: __init__.py  parser.py
src/core/queue/: __init__.py  task_manager.py  tasks.py
src/core/rendering/: __init__.py  browser_service_api.py  browser_service_client.py  html_generator.py  png_generator.py
src/core/rendering/templates/: base.html
src/mcp_server/: __init__.py  handlers.py  resources.py  server.py  tools.py
src/models/: __init__.py  schemas.py
src/utils/: __init__.py
tests/: __init__.py  conftest.py
tests/data/: __init__.py  example_outputs.py  sample_dsl_documents.py  sample_render_options.py  test_scenarios.py
tests/deployment/: __init__.py  test_docker_containers.py
tests/e2e/: __init__.py  conftest.py  test_pipeline_variants.py  test_sse_pipeline.py
tests/fixtures/: __init__.py  sse_fixtures.py
tests/integration/: __init__.py  test_api_contracts.py  test_e2e_mcp_stdio_pipeline.py  test_end_to_end_pipeline.py  test_mcp_protocol.py  test_sse_e2e_workflow.py  test_sse_error_handling.py  test_sse_integration.py
tests/performance/: __init__.py  test_load_performance.py  test_sse_performance.py
tests/security/: __init__.py  test_security_validation.py  test_sse_security.py
tests/unit/: __init__.py  test_dsl_parser.py  test_html_generator.py  test_png_generator.py  test_storage_manager.py
tests/utils/: __init__.py  assertions.py  data_generators.py  helpers.py  mocks.py
